openapi/docs/v2/docs/TermsOfUseAcceptance.md
# TermsOfUseAcceptance


## Properties
Name | Type | Description | Notes
------------ | ------------- | ------------- | -------------
**accepted** | **bool** | Are the terms of use accepted | 
**first_acceptance_date** | **datetime** | Date of the first time the terms of use were accepted. | 
**version_terms_of_use_first_accept** | **str** | Version of the first accepted Terms of Use. | 
**last_acceptance_date** | **datetime** | Date of the last time the terms of use were accepted. | [optional] 
**version_terms_of_use_last_accept** | **str** | Version of the last accepted Terms of Use. | [optional] 
**any string name** | **bool, date, datetime, dict, float, int, list, str, none_type** | any string name can be used but the value must be the correct type | [optional]

[[Back to Model list]](../README.md#documentation-for-models) [[Back to API list]](../README.md#documentation-for-api-endpoints) [[Back to README]](../README.md)


